<resources>
    <string name="app_name">Krescendos</string>
    <string name="up_next">Up Next</string>
    <string name="party_name">Party Name</string>
    <string name="could_not_create_party">Could not create party</string>
    <string name="create">Start a party</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip">Skip</string>
    <string name="party_does_not_exist">Party does not exist</string>
    <string name="join">Join a party</string>
    <string name="track_name">Track Name</string>
    <string name="krescendos_logo">Krescendos Logo</string>
    <string name="enter_party_code">Enter Party Code</string>
    <string name="join_short">Join</string>
    <string name="party_welcome_message">Party Welcome Message</string>
    <string name="create_short">Start party</string>
    <string name="party_details">Party Details</string>
    <string name="party_options">Party Options</string>
    <string name="auto_suggest_songs">Auto-suggest songs</string>
    <string name="allow_others_to_suggest_songs">Allow others to suggest songs</string>
    <string name="krescendos">Krescendos</string>
    <string name="trackname">TrackName</string>
    <string name="artist_album">Artist-Album</string>
    <string name="_0_00">0:00</string>
    <string name="_n0_00">-0:00</string>
    <string name="code_placeholder">A B C 1 2 3</string>
    <string name="share_your_party_code">Share your party code</string>
    <string name="let_s_find_some_music">Let\'s find some music</string>
    <string name="import_spotify_playlist">Import Spotify Playlist</string>
    <string name="krescendos_recommend">Krescendos Recommend</string>
    <string name="add_songs_manually">Add songs manually</string>
    <string name="search_for_a_song">Search for a song</string>
    <string name="recommend">Recommend</string>
    <string name="i_m_done">I\'m Done</string>
    <string name="round_button_text">Option</string>
    <string name="connecting">Connecting...</string>
    <string name="add_a_track">Add a track</string>
    <string name="share_your_code">Share your code</string>
    <string name="you_ll_need_a_spotify_premium_account_to_host_a_party">You\'ll need a Spotify Premium account to host a party</string>
    <string name="_0">0</string>
    <string name="rejoin_last_party_as_host">Rejoin last party as host</string>
    <string name="playlists_title">\'s Playlists</string>
    <string name="playlist_size">playlist_size</string>
    <string name="playlist_name">playlist_name</string>
    <string name="no_public_playlists_found">No public playlists found</string>
    <string name="finding_playlists">Finding playlists</string>
    <string name="searching_for_recommendations">Searching for recommendations...</string>
    <string name="searching_spotify">Searching Spotify...</string>
    <string name="fetching_playlists">Fetching your public playlists...</string>
    <string name="searching">Searching...</string>
</resources>
