<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/host_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context="com.krescendos.activities.HostPlayerActivity">

    <LinearLayout
        android:id="@+id/host_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/host_title_icon"
            android:layout_width="57dp"
            android:layout_height="63dp"
            android:layout_weight="0.05"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/host_title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/krescendos"
            android:textAppearance="@style/TitleText"
            android:textSize="@dimen/title_size" />

        <ImageView
            android:id="@+id/host_title_placeholder"
            android:layout_width="57dp"
            android:layout_height="63dp"
            android:layout_weight="0.05"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/host_current_track_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_current_track_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/trackname"
            android:textAppearance="@style/TitleText" />

        <TextView
            android:id="@+id/host_current_track_artist_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/artist_album"
            android:textAppearance="@style/BodyText" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/host_album_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/host_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            app:srcCompat="@drawable/like_button_off" />

        <ImageButton
            android:id="@+id/host_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:text="@string/play_pause"
            app:srcCompat="@drawable/play_button" />

        <ImageButton
            android:id="@+id/host_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:text="@string/skip"
            app:srcCompat="@drawable/next_button" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark" />

    <TextView
        android:id="@+id/playerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/up_next"
        android:textAppearance="@style/TitleText" />

    <ListView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
