<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/client_player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:context="com.krescendos.activities.HostPlayerActivity">

        <include
            android:id="@+id/client_title_bar"
            layout="@layout/title_bar_layout" />

        <include
            android:id="@+id/client_current_track_layout"
            layout="@layout/current_track_layout" />

        <LinearLayout
            android:id="@+id/client_track_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/client_time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0_00"
                android:textAppearance="@style/BodyText"
                android:textSize="@dimen/time_text" />

            <TextView
                android:id="@+id/client_time_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_n0_00"
                android:textAppearance="@style/BodyText"
                android:textSize="@dimen/time_text" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/client_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/colorText"
            android:progressTint="@color/colorPrimary"
            android:splitTrack="false"
            android:theme="@style/SeekBar"
            android:thumb="@null"
            android:thumbTint="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/client_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/client_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/add"
                android:contentDescription="@string/add_a_track" />
        </LinearLayout>

        <TextView
            android:id="@+id/client_playerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_next"
            android:textAppearance="@style/TitleText" />

        <ListView
            android:id="@+id/client_playerList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>
</ScrollView>